Define /home/rpmbuilder/.rpmmacros owner to rpmbuilder.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,6 +40,7 @@ RUN adduser -G wheel rpmbuilder \
 	&& chmod -R 777 /home/rpmbuilder/rpmbuild
 
 COPY .rpmmacros /home/rpmbuilder/
+RUN chown rpmbuilder:wheel /home/rpmbuilder/.rpmmacros
 USER rpmbuilder
 
 WORKDIR /home/rpmbuilder
